network-policy/go-conference-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: 2018-03-23T17:57:00Z
  generation: 1
  labels:
    run: conference-app
  name: conference-app
  namespace: sandbox
spec:
  replicas: 2
  selector:
    matchLabels:
      run: conference-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: conference-app
    spec:
      containers:
      - image: tkrausjr/conference-app
        name: conference-app
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
