network-policy/nsxpol-allow-9090-ns-sandbox.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: sandbox-only-9090
  namespace: sandbox
spec:
  podSelector:
    matchLabels:
      run: conference-app
  ingress:
  - ports:
    - port: 9090
    from: []
